--- a/partials/about.html
+++ b/partials/about.html
@@ -5,7 +5,7 @@
   <article class="content">
     <p>Written by <a href="https://twitter.com/DanielJonss">@DanielJonss</a>.</p>
     <p>Licensed under GPL version 3 or later with source code available on Github at <a href="https://github.com/MaTachi/stopwatch">MaTachi/stopwatch</a>.</p>
-    <p>Built using <a href="http://angularjs.org/">AngularJS</a> and fonts <a href="http://buildingfirefoxos.com/downloads/">Feura Sans 1.0 Light</a> and <a href="https://github.com/mozilla-b2g/moztt/blob/master/Roboto-20120823/Roboto-Bold.ttf">Roboto Bold</a>.</p>
+    <p>Built using <a href="http://angularjs.org/">AngularJS</a> and the fonts <a href="http://buildingfirefoxos.com/downloads/">Feura Sans 1.0 Light</a> and <a href="https://github.com/mozilla-b2g/moztt/blob/master/Roboto-20120823/Roboto-Bold.ttf">Roboto Bold</a>.</p>
   </article>
   <footer>
     <a href="#/home">« Go back to Stopwatch</a>
