Fix the background in webkit browsers
I had only tested it in Firefox. And apparently webkit doesn't like the
radial-gradient. It was in Midori I saw this problem.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -13,7 +13,9 @@ html, body {
 }
 
 body {
-  background: radial-gradient(ellipse at center, rgba(49,136,191,1) 0%,rgba(18,84,145,1) 100%);
+  background: radial-gradient(ellipse, rgba(49,136,191,1) 0%,rgba(18,84,145,1) 100%);
+  background: -moz-radial-gradient(ellipse, rgba(49,136,191,1) 0%,rgba(18,84,145,1) 100%);
+  background: -webkit-radial-gradient(ellipse, rgba(49,136,191,1) 0%,rgba(18,84,145,1) 100%);
   color: #fff;
   font-family: FeuraSans, sans-serif;
   font-size: 16px;
